# changelog-ci-poc-v2

./: CHANGELOG.md  README.md  pyproject.toml
changelogcipoc/: feature_a.py  feature_b.py  feature_c.py  feature_d.py
