[tool.poetry]
name = "changelog-ci-poc-v2"
version = "0.2.0"
description = "This is a poc for changelog-ci"
authors = ["Robin Matz <robin.s.matz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
